2002-02-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	fixed leaving tear off menus when something is selected with the mouse

2002-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	* fvwm/menus.c:
	more work on tear off menus

2002-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.h (XEVMASK_TEAR_OFF_MENU):
	* fvwm/menus.c (menu_enter_tear_off_menu):
	(find_entry):
	(menuShortcuts):
	(MenuInteraction):
	(pop_menu_up):
	properly calculate pointer position in tear off menus
	(MenuInteraction):
	fixed active wait w/ poopup/popdown delays

	* fvwm/windowlist.c (CMD_WindowList):
	don't initialise some variables twice

2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (CaptureOneWindow):
	properly recapture tear off menus

	(IS_MESSAGE_IN_MASK):
	(is_message_selected):
	(PositiveWrite):
	(PositiveWrite):
	* fvwm/schedule.c (deschedule):
	(squeue_execute):
	* fvwm/events.c (My_XNextEvent):
	* libs/queue.h:
	* fvwm/module_interface.c (ClosePipes):
	(CMD_ModuleSynchronous):
	(KillModule):
	performance enhancements; made macros out of simple functions

	* fvwm/builtins.c (CMD_WindowShade):
	don't redraw the decorations if window was not shaded or unshaded

	* fvwm/schedule.c (deschedule_obj_func):
	(execute_obj_func):
	fixed core dump when a scheduled command deschedules itself

2002-01-31  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	FvwmButtons news

2002-01-31  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/move.c (moveLoop):
	while moving if Mod1 (Alt/Meta) is pressed ignore snap attraction

	* fvwm/session.c (get_version_string):
	switch from static to date-based version string

	* configure.in:
	remove --enable-kanji compatibility option

	* fvwm/schedule.h:
	* libs/queue.h:
	fix warnings, gcc compains on having something after #endif

2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (CMD_Delete):
	(CMD_Close):
	(CMD_Destroy):